# open5gsTest

./: .gitignore  0307.pcap  1219.pcap  1219_1.pcap  1219_2.pcap  1220.pcap  1221_two.pcap  2.6.4.1编译说明.docx  5gc.service  LICENSE  WPS云盘 - 快捷方式.lnk  cap.sh  license.txt  meson.build  meson_options.txt  modifyconfig.sh  nano.save  nbraddr  nfconfig.yaml  nfconfig.yamlbak  nfconfig1.yaml  nfconfig2.yaml  nfconfig6.yaml  process_watchdog.sh  prometheus-client-c.git  prometheus.yml  raw2.c  rawsocket.c  readme.txt  rte_kni.ko  service.sh  setenv.sh  simu_modify_config.sh  start.sh  start5gc.sh  start_first.sh  start_first_old.sh  start_prome.sh  start_prometheus.sh  starta2.sh  (+8 more)
config/: a.yaml  a.yamlbak  ausf.yaml  bsf.yaml  hss.yaml  mme.yaml  nfconfig1.yaml  nfconfig2.yaml  nrf.yaml  nssf.yaml  nssf.yamlbak  package-lock.json  package.json  pcf.yaml  pcf.yamlbak  pcrf.yaml  scp.yaml  sgwc.yaml  sgwu.yaml  smf.yaml  smf.yamlbak  udm.yaml  udm.yaml_command  udm.yamlbak  udr.yaml  udr.yamlbak  upf.yaml  upf.yamlbak
configs/: 310014.yaml.in  csfb.yaml.in  meson.build  non3gpp.yaml.in  sample.yaml.in  slice.yaml.in  srsenb.yaml.in  volte.yaml.in  vonr.yaml.in
configs/5gc/: amf.yaml.in  amf2.yaml.in  ausf.yaml.in  ausf2.yaml.in  bsf.yaml.in  bsf2.yaml.in  eir.yaml.in  eir2.yaml.in  hss.yaml.in  meson.build  mme.yaml.in  nrf.yaml.in  nrf2.yaml.in  nssf.yaml.in  nssf2.yaml.in  pcf.yaml.in  pcf2.yaml.in  pcrf.yaml.in  sacc.yaml.in  sacc2.yaml.in  scp.yaml.in  scp2.yaml.in  sepp.yaml.in  sepp1.yaml.in  sgwc.yaml.in  sgwu.yaml.in  smf.yaml.in  smf2.yaml.in  udm.yaml.in  udm2.yaml.in  udr.yaml.in  udr2.yaml.in  upf.yaml.in  upf2.yaml.in
configs/5gc_diffip/: meson.build  nrf.yaml.in  pcf.yaml.in  sacc.yaml.in  sepp2.yaml.in  sgwu.yaml.in
configs/5gcone/: amf.yaml.in  amf2.yaml.in  ausf.yaml.in  ausf2.yaml.in  bsf.yaml.in  bsf2.yaml.in  eir.yaml.in  eir2.yaml.in  hss.yaml.in  meson.build  mme.yaml.in  nrf.yaml.in  nrf2.yaml.in  nssf.yaml.in  nssf2.yaml.in  pcf.yaml.in  pcf2.yaml.in  pcrf.yaml.in  sacc.yaml.in  sacc2.yaml.in  scp.yaml.in  scp2.yaml.in  sepp.yaml.in  sepp1.yaml.in  smf.yaml.in  smf2.yaml.in  udm.yaml.in  udm2.yaml.in  udr.yaml.in  udr2.yaml.in  upf.yaml.in  upf2.yaml.in
configs/examples/: 5gc-sepp1-999-70.yaml.in  5gc-sepp3-315-010.yaml.in  5gc-tls-sepp1-999-70.yaml.in  5gc-tls-sepp3-315-010.yaml.in  gnb-001-01-ue-001-01.yaml.in  gnb-001-01-ue-315-010.yaml.in  gnb-001-01-ue-999-70.yaml.in  gnb-315-010-ue-001-01.yaml.in  gnb-315-010-ue-999-70.yaml.in  gnb-999-70-ue-001-01.yaml.in  gnb-999-70-ue-999-70.yaml.in  meson.build
configs/freeDiameter/: hss.conf.in  meson.build  mme.conf.in  pcf.conf.in  smf.conf.in  smf2.conf.in
configs/logrotate/: 5gc.in  meson.build
configs/newsyslog/: 5gc.conf.in  meson.build
configs/open5gs/: amf.yaml.in  ausf.yaml.in  bsf.yaml.in  meson.build  mme.yaml.in  nrf.yaml.in  nssf.yaml.in  pcf.yaml.in  scp.yaml.in  sgwc.yaml.in  sgwu.yaml.in  smf.yaml.in  udm.yaml.in  udr.yaml.in  upf.yaml.in
configs/systemd/: 5gc-amf-spsd@.service.in  5gc-amfd.service.in  5gc-ausfd.service.in  5gc-bsfd.service.in  5gc-eird.service.in  5gc-hssd.service.in  5gc-mmed.service.in  5gc-nrfd.service.in  5gc-nssfd.service.in  5gc-pcfd.service.in  5gc-pcrfd.service.in  5gc-scpd.service.in  5gc-seppd.service.in  5gc-sgwcd.service.in  5gc-sgwud.service.in  5gc-smfd.service.in  5gc-udmd.service.in  5gc-udrd.service.in  5gc-upfd.service.in  5gc-webui.service.in  99-5gc.netdev  99-5gc.network  meson.build  udp_ini_conf.sh  udpconf.service
configs270/: 310014.yaml.in  csfb.yaml.in  meson.build  non3gpp.yaml.in
configs270/5gc/: amf.yaml.in  hss.yaml.in  nrf.yaml.in  nssf.yaml.in  pcrf.yaml.in  udm.yaml.in  udr.yaml.in  upf.yaml.in
configs270/5gc/hnet/: meson.build
configs270/examples/: 5gc-sepp2-001-01.yaml.in  5gc-tls-sepp2-001-01.yaml.in  gnb-315-010-ue-315-010.yaml.in  gnb-999-70-ue-315-010.yaml.in
configs270/freeDiameter/: pcrf.conf.in
configs270/logrotate/: 5gc.in
configs270/newsyslog/: meson.build
configs270/systemd/: 5gc-nssfd.service.in  5gc-scpd.service.in  5gc-sgwcd.service.in  5gc-smfd.service.in  5gc-udrd.service.in  5gc-upfd.service.in  meson.build
curltest/: check_curl_version  check_curl_version.c
download/: Machine.id
lib/: meson.build
lib/app/: meson.build  ogs-app-timer.c  ogs-app-timer.h  ogs-app.h  ogs-config.c  ogs-config.h  ogs-context.c  ogs-context.h  ogs-init.c  ogs-init.h  ogs-timer.c  ogs-timer.h
lib/core/: abts.c  ogs-conv.h  ogs-hash.c  ogs-log.c  ogs-log.h  ogs-memory.c  ogs-sockaddr.c  ogs-socknode.c  ogs-strings.c  ogs-thread.c  ogs-thread.h  ogs-time.c  ogs-time.h  ogs-uuid.c  ogs-uuid.h
lib/license/: MakeLicense.c  MakeMachineID.c  license.c  license.h  meson.build  psMD5.h
lib/telnet/: meson.build  telnet.c  telnet.h
license/: CheckLicense  CheckLicense.c  License.txt  Machine.id  MakeLicense  MakeLicense.c  MakeMachineID  license  license.c  license.h  licensebak.c  makefile  psMD5.c  psMD5.h
misc/: make-certs.sh  netconf.sh  netconf2.sh  udp_ini_conf.sh
omm/: grafanadata.tar  prometheus.tar
src/: main.c  meson.build
src/eir/: app.c  context.c  context.h  eir-sm.c  eir-sm.h  event.c  event.h  init.c  meson.build  metrics.c  metrics.h  neir-handler.c  neir-handler.h  sbi-path.c  sbi-path.h
src/license/: CheckLicense.c  MakeLicense.c  MakeLicense.cok  MakeMachineID.c  meson.build
src/sacc/: app.c  context.c  context.h  event.c  event.h  init.c  meson.build  metrics.c  metrics.h  sacc-handler.c  sacc-handler.h  sacc-sm.c  sacc-sm.h  sbi-path.c  sbi-path.h  telnetcmd.c  timer.c  timer.h
src/upf/: arp-nd.cpp  arp-nd.h  context.c  context.h  ctrl-path.c  ctrl-path.h  dispatcher.c  dpdk-arp-nd.c  dpdk-arp-nd.h  dpdk-common.h  dpdk-path.c  dpdk-path.h  event.c  event.h  forward.c  gtp-path.c  hash.h  init.c  meson.build  metrics.c  metrics.h  n4-handler.c  nbr-sctp.c  nbr-sctp.h  rule-match.c  telnetcmd.c  tw_timer.c  tw_timer.h  upf-dpdk.c  upf-dpdk.h  upf-sm.c
webui/: Node.js.docx  Readme.txt  config.json  package-lock.json  package.json  properties .js  properties.js  start.sh  版本测试.xlsx
(+496 files in other folders)
